// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`localizeRoutes > Route options resolver: routing disable > should be disabled routing 1`] = `
[
  {
    "name": "home",
    "path": "/",
  },
  {
    "name": "about",
    "path": "/about",
  },
]
`;

exports[`localizeRoutes > basic > should be localized routing 1`] = `
[
  {
    "name": "home",
    "path": "/",
  },
  {
    "name": "home___locale",
    "path": "/:locale(en|ja)",
  },
  {
    "name": "about",
    "path": "/about",
  },
  {
    "name": "about___locale",
    "path": "/:locale(en|ja)/about",
  },
]
`;

exports[`localizeRoutes > basic > should be localized routing 2`] = `
[
  {
    "name": "home",
    "path": "/",
  },
  {
    "name": "home___locale",
    "path": "/:locale(en|ja)",
  },
  {
    "name": "about",
    "path": "/about",
  },
  {
    "name": "about___locale",
    "path": "/:locale(en|ja)/about",
  },
]
`;

exports[`localizeRoutes > has children > should be localized routing 1`] = `
[
  {
    "children": [
      {
        "name": "user-profile",
        "path": "profile",
      },
      {
        "name": "user-posts",
        "path": "posts",
      },
    ],
    "name": "user",
    "path": "/user/:id",
  },
  {
    "children": [
      {
        "name": "user-profile___locale",
        "path": "profile",
      },
      {
        "name": "user-posts___locale",
        "path": "posts",
      },
    ],
    "name": "user___locale",
    "path": "/:locale(en|ja)/user/:id",
  },
]
`;

exports[`localizeRoutes > has children > should be localized routing 2`] = `
[
  {
    "children": [
      {
        "name": "user-profile",
        "path": "profile",
      },
      {
        "name": "user-posts",
        "path": "posts",
      },
    ],
    "name": "user",
    "path": "/user/:id",
  },
  {
    "children": [
      {
        "name": "user-profile___locale",
        "path": "profile",
      },
      {
        "name": "user-posts___locale",
        "path": "posts",
      },
    ],
    "name": "user___locale",
    "path": "/:locale(en|ja)/user/:id",
  },
]
`;

exports[`localizeRoutes > route name separator > should be localized routing 1`] = `
[
  {
    "name": "home",
    "path": "/",
  },
  {
    "name": "home___locale",
    "path": "/:locale(en|ja)",
  },
  {
    "name": "about",
    "path": "/about",
  },
  {
    "name": "about___locale",
    "path": "/:locale(en|ja)/about",
  },
]
`;

exports[`localizeRoutes > route name separator > should be localized routing 2`] = `
[
  {
    "name": "home",
    "path": "/",
  },
  {
    "name": "home___locale",
    "path": "/:locale(en|ja)",
  },
  {
    "name": "about",
    "path": "/about",
  },
  {
    "name": "about___locale",
    "path": "/:locale(en|ja)/about",
  },
]
`;

exports[`localizeRoutes > strategy: "no_prefix" > should be localized routing 1`] = `
[
  {
    "name": "home",
    "path": "/",
  },
  {
    "name": "about",
    "path": "/about",
  },
]
`;

exports[`localizeRoutes > strategy: "prefix" > should be localized routing 1`] = `
[
  {
    "name": "home___locale",
    "path": "/:locale(en|ja)",
  },
  {
    "name": "about___locale",
    "path": "/:locale(en|ja)/about",
  },
]
`;

exports[`localizeRoutes > strategy: "prefix_and_default" > should be localized routing 1`] = `
[
  {
    "name": "home",
    "path": "/",
  },
  {
    "name": "home___locale",
    "path": "/:locale(ja)",
  },
  {
    "name": "about",
    "path": "/about",
  },
  {
    "name": "about___locale",
    "path": "/:locale(ja)/about",
  },
  {
    "children": [
      {
        "name": "user-profile",
        "path": "profile",
      },
      {
        "name": "user-posts",
        "path": "posts",
      },
    ],
    "name": "user",
    "path": "/user/:id",
  },
  {
    "children": [
      {
        "name": "user-profile___locale",
        "path": "profile",
      },
      {
        "name": "user-posts___locale",
        "path": "posts",
      },
    ],
    "name": "user___locale",
    "path": "/:locale(ja)/user/:id",
  },
]
`;

exports[`localizeRoutes > strategy: "prefix_except_default" > should be localized routing 1`] = `
[
  {
    "name": "home",
    "path": "/",
  },
  {
    "name": "home___locale",
    "path": "/:locale(ja)",
  },
  {
    "name": "about",
    "path": "/about",
  },
  {
    "name": "about___locale",
    "path": "/:locale(ja)/about",
  },
]
`;

exports[`localizeRoutes > trailing slash > should be localized routing 1`] = `
[
  {
    "name": "home",
    "path": "/",
  },
  {
    "name": "home___locale",
    "path": "/:locale(en|ja)/",
  },
  {
    "name": "about",
    "path": "/about",
  },
  {
    "name": "about___locale",
    "path": "/:locale(en|ja)/about/",
  },
]
`;

exports[`localizeRoutes > trailing slash > should be localized routing 2`] = `
[
  {
    "name": "home",
    "path": "/",
  },
  {
    "name": "home___locale",
    "path": "/:locale(en|ja)/",
  },
  {
    "name": "about",
    "path": "/about",
  },
  {
    "name": "about___locale",
    "path": "/:locale(en|ja)/about/",
  },
]
`;
